Finally fixed Grid so that it correctly updates boxes as well as rows and columns. It's a bit ugly though so maybe we can tidy this