@@ -15,3 +15,7 @@ dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.6.0'
 }
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
